@@ -1,5 +1,9 @@
 OpenDNSSEC 2.2 - 2017-xx-xx
 
+ * OPENDNSSEC-901: Enforcer would ignore <ManualKeyGeneration/> tag in conf.xml
+
+OpenDNSSEC 2.1.1 - 2017-04-28
+
 * OPENDNSSEC-882: Signerd exit code always non-zero.
 * OPENDNSSEC-889: MySQL migration script didn't work for all database and
   MySQL versions.
